Fixed alignment issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,13 +33,15 @@ body {
 
 #logout-btn{
     text-decoration: none;
-    padding: 10px;
-    background-color: #2C3E50;
+    padding: 10px 10px;
+    background-color: #44576a;
     color: white;
     font-weight: bold;
     border-radius: 30px;
     cursor: pointer;
-
+    filter: contrast(1.1) brightness(1.1);
+    border: none;
+    
 }
 /* Dropdown container */
 .custom-dropdown {
@@ -137,7 +139,7 @@ body {
     align-items: center;
     justify-content: space-between;
     gap: 50px;
-    background-color: #FFCC33;
+    background-color: #FDD835;
     padding: 10px 20px;
     border-radius: 20px;
     font-size: 15px;
@@ -146,6 +148,12 @@ body {
     text-wrap: nowrap;
     font-weight: bold;
     width: max-content;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+    filter: contrast(1) brightness(1);
+}
+
+.account-cart:hover{
+    background-color: #ffce51;
 }
 
 
@@ -191,6 +199,7 @@ body {
     height: 14px;
     width: 14px;
     margin-left: 7px;
+    color: #000400;
     /* margin-top: 4px; */
 }
 
@@ -225,7 +234,7 @@ body {
     list-style: none;
     display: flex;
     justify-content: flex-start;
-    gap: 140px;
+    gap: 170px;
     margin-left: 10px;
 }
 
@@ -251,6 +260,23 @@ body {
 /* Dropdown Container */
 .subhdr .dropdown {
     position: relative;
+}
+
+.subhdr #all-dropdown-btn{
+    text-decoration: none;
+    background: none;
+    border: none;
+    font-size: 16px;
+    color: white;
+    font-weight: bold;
+    margin-right: 70px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+#location-dropdown-btn .arrow{
+    margin-left: 0px;
+    color: #000400;
 }
 
 /* Dropdown Menu */
@@ -300,7 +326,9 @@ hr {
 .logo {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 2px;
+    /* margin-right: 0px; */
+    margin-left: 0px;
 }
 
 .logo img {
@@ -378,6 +406,7 @@ hr {
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 10;
+    
 }
 
 .pg-form {
@@ -424,7 +453,7 @@ hr {
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2); /* Adds subtle depth */
     transition: all 0.3s ease-in-out;
     border: none;
-
+    cursor: pointer;
 }
 
 .form-terms {
@@ -882,6 +911,42 @@ hr {
 .fade-in.show {
     opacity: 1;
     transform: translateY(0);
+}
+
+.filter-button{
+    margin-left: 70px;
+    margin-top: 2px;
+}
+
+.subhdr .dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #2C3E50;
+    width: 250px;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    top: 100%;
+    left: 0;
+}
+
+.subhdr .dropdown-menu.active {
+    display: block !important;
+}
+
+#location-dropdown-btn{
+    font-size: medium;
+    font-weight: bolder;
+    background: none;
+    border: none;
+    color: #fafafa;
+    cursor: pointer;
+}
+
+#location-dropdown{
+    margin-left: 220px;
+    cursor: pointer;
+    /* background: none; */
 }
 
 
